<resources>
    <string name="app_name">EQRCodeApp</string>
    <string name="facebook_app_id">1756950240982497</string>
    <string name="fb_login_protocol_scheme">fb1756950240982497</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <!-- Fragment Titles -->
    <string name="prod_dtls_title">"Promos"</string>
    <string name="prod_dtls">"Product Details"</string>
    <string name="other_info">"Other Info"</string>
    <string name="promo">"Promos"</string>

    <!---->
    <string name="emailadd">Email Address</string>

    <!-- Forgot Password Activity -->
    <string name="resetlbl">RESET YOUR PASSWORD</string>
    <string name="resetinstructlbl">Enter the email address of your\n account to reset your password</string>
    <string name="resetbtn">RESET PASSWORD</string>
    <string name="returnlogbtn">RETURN TO LOG-IN</string>

    <!--Scan Activity -->
    <string name="nandplbl">NEWS AND \nPROMOS</string>
    <string name="contactlbl">CONTACT US</string>
    <string name="helplbl">HELP</string>
    <string name="scanlbl_lo">SCAN QR CODE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base2">Base2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_base_navigation">BaseNavigationActivity</string>

    <!--User Details-->
    <string name="username">username</string>
    <string name="email">emailaddress</string>
    <string name="id">id</string>
    <string name="firstname">firstname</string>
    <string name="middlename">middlename</string>
    <string name="lastname">lastname</string>
    <string name="suffix">suffix</string>
    <string name="contact">contact</string>
    <string name="gender">gender</string>
    <string name="empnumber">empnumber</string>
    <string name="jobtitle">jobtitle</string>
    <string name="photo">photo</string>
</resources>
